...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ls3-eR-jlU">
                                                        <rect key="frame" x="0.0" y="30" width="147.5" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="captureMessageButton"/>
                                                        <state key="normal" title="Message"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mjD-vZ-Wtp" userLabel="UIClick Transaction">
                                                        <rect key="frame" x="0.0" y="60" width="147.5" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="uiClickTransactionButton"/>
                                                        <state key="normal" title="UIClick Transaction"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZK-C2-hjR">
                                                        <rect key="frame" x="0.0" y="120" width="147.5" height="30"/>
                                                        <state key="normal" title="Error"/>
                                                        <connections>
                                                            <action selector="captureError:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XSc-zg-aee"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D9Z-XG-OJP">
                                                        <rect key="frame" x="0.0" y="150" width="147.5" height="30"/>
                                                        <state key="normal" title="NSException"/>
                                                        <connections>
                                                            <action selector="captureNSException:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BT7-dZ-MrB"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwi-v3-e8T">
                                                        <rect key="frame" x="0.0" y="93" width="216.5" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="loremIpsumButton"/>
                                                        <state key="normal" title="Lorem Ipsum"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8CV-WC-ffq">
                                                        <rect key="frame" x="0.0" y="124" width="216.5" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="testNavigationTransactionButton"/>
                                                        <state key="normal" title="Image"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LvU-yx-01i">
                                                        <rect key="frame" x="0.0" y="155" width="216.5" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="showNibButton"/>
                                                        <state key="normal" title="Show Nib"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RjO-LN-eHj">
                                                        <rect key="frame" x="0.0" y="186" width="216.5" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="showTableViewButton"/>
                                                        <state key="normal" title="TableView"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ok0-hq-2kK">
                                                        <rect key="frame" x="0.0" y="217" width="216.5" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="showSplitViewButton"/>
                                                        <state key="normal" title="SplitView"/>
                                                        <connections>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Frames" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lcm-n2-ys4" userLabel="frames">
                                                <rect key="frame" x="8" y="116.5" width="382" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="framesStatsLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Root ViewController" id="NSk-XK-KWR">
                        <barButtonItem key="leftBarButtonItem" title="Close" id="GY1-9d-Bxh">
                            <connections>
...
